src/test/ui/argument-suggestions/issue-97197.stderr
error[E0061]: this function takes 6 arguments but 2 arguments were supplied
  --> $DIR/issue-97197.rs:2:5
   |
LL |     g((), ());
   |     ^ --  -- supplied 2 arguments
   |     |
   |     expected 6 arguments
   |
note: function defined here
  --> $DIR/issue-97197.rs:6:8
   |
LL | pub fn g(a1: (), a2: bool, a3: bool, a4: bool, a5: bool, a6: ()) -> () {}
   |        ^ ------  --------  --------  --------  --------  ------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
